<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/transfer_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.compose.ui.platform.ComposeView
            android:id="@+id/cardComposeShot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_4sdp"
            android:background="@drawable/card_view_bg"
            app:layout_constraintTop_toBottomOf="@+id/cardComposeShot">

            <com.drp.shared_ui.widget.xml.BankEditText
                android:id="@+id/etFacility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/font_regular"
                android:hint="@string/facilities_id"
                android:inputType="phone"
                android:maxLength="35"
                android:textDirection="ltr"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/etFacility"
                app:layout_constraintTop_toTopOf="parent" />

            <com.drp.shared_ui.widget.xml.AmountEditText
                android:id="@+id/etPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:hint="@string/amount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/etFacility"
                app:layout_constraintTop_toBottomOf="@id/etFacility" />

            <com.drp.shared_ui.widget.xml.PasswordEditText
                android:id="@+id/etCVV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/transfer_card_cvv2"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:textDirection="rtl"
                app:constraint_direction="rtl"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etPrice" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/expiration_txt"
                style="@style/normal_title_txt"
                android:layout_marginTop="@dimen/between_same_items"
                android:text="@string/transfer_card_expire"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etCVV" />

            <com.drp.shared_ui.widget.xml.MySpinner
                android:id="@+id/spinnerMonth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/month"
                app:layout_constraintEnd_toStartOf="@id/guidLine"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/expiration_txt"  />

            <com.drp.shared_ui.widget.xml.MySpinner
                android:id="@+id/spinnerYear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/year"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guidLine"
                app:layout_constraintTop_toBottomOf="@+id/expiration_txt" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidLine"
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <com.drp.shared_ui.widget.xml.BankEditText
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:hint="@string/description"
                android:textDirection="rtl"
                android:layout_marginTop="@dimen/_16sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/etFacility"
                app:layout_constraintTop_toBottomOf="@id/spinnerMonth"
                tools:ignore="RtlHardcoded" />


            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/btnInquiry"
                style="@style/button_blue_style"
                android:layout_marginTop="@dimen/_32sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/submit_continue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtDescription"
                app:spinning_bar_color="@color/white"
                app:spinning_bar_padding="6dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
