<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/insurance_payment_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.compose.ui.platform.ComposeView
                android:id="@+id/cardComposeShot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_4sdp"
                android:background="@drawable/card_view_bg"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/cardComposeShot">

                <com.drp.shared_ui.widget.xml.BankEditText
                    android:id="@+id/etPaymentId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/content_from_edge"
                    android:hint="@string/pay_id_title"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="17"
                    android:textDirection="ltr" />

                <com.drp.shared_ui.widget.xml.AmountEditText
                    android:id="@+id/etPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/between_same_items"
                    android:hint="@string/amount" />

                <com.drp.shared_ui.widget.xml.PasswordInput
                    android:id="@+id/etCVV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/transfer_card_cvv2"
                    android:inputType="numberPassword"
                    android:maxLength="4"
                    android:textDirection="rtl"
                    app:constraint_direction="rtl"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etPrice" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/expiration_txt"
                    style="@style/normal_title_txt"
                    android:layout_marginTop="@dimen/between_same_items"
                    android:text="@string/transfer_card_expire"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etCVV" />



                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.drp.shared_ui.widget.xml.MySpinner
                        android:id="@+id/spinnerMonth"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/month"
                        app:layout_constraintEnd_toStartOf="@id/guidLine"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        />
                    <com.drp.shared_ui.widget.xml.MySpinner
                        android:id="@+id/spinnerYear"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/year"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/guidLine"
                        app:layout_constraintTop_toTopOf="parent"
                         />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guidLine"
                        android:layout_width="@dimen/_1sdp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.5" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                    android:id="@+id/btnInquiry"
                    style="@style/button_blue_style"
                    android:layout_marginTop="@dimen/between_different_items"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:text="@string/submit_continue" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>