<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/card_view_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_4sdp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnClosePopUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:tint="@color/gray"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_done"
        tools:ignore="VectorDrawableCompat" />

    <View
        android:id="@+id/line"
        style="@style/line_style"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnClosePopUp" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitleSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:fontFamily="@font/font_regular"
        android:text="@string/hub_card_enrollment_dialogue_text"
        android:textSize="@dimen/ui_text_normal"
        android:gravity="center"
        android:justificationMode="inter_word"
        android:textDirection="rtl"
        android:lineSpacingExtra="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line"
        tools:targetApi="o" />


    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/btn_enroll"
        style="@style/button_blue_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:elevation="0dp"
        android:fontFamily="@font/font_regular"
        android:text="@string/hub_card_enroll"
        android:layout_marginBottom="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnDismiss"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleSheet"
        app:layout_constraintWidth_percent="0.4" />

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/btnDismiss"
        style="@style/button_cancle_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/btn_enroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_enroll"
        app:layout_constraintTop_toTopOf="@id/btn_enroll"
        app:layout_constraintWidth_percent="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>